<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_background_image"
        tools:context=".MainActivity"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="100dp"
                android:textStyle="bold"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/user_name"
                android:textColorHint="@color/black"
                android:alpha=".4"
                android:background="@drawable/custom_button"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:alpha=".4"
                android:background="@drawable/custom_button"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:layout_marginBottom="30dp" />

            <CheckBox
                android:id="@+id/cbKeepSignedIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/keep_signed_in"
                android:layout_marginBottom="30dp"
                />

            <Button
                android:id="@+id/btSignIn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginBottom="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:orientation="horizontal"
                android:gravity="center">
                <View
                    android:layout_width="190dp"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:alpha=".2"/>
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="12dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_round_sports_baseball_24"
                    android:contentDescription="@string/dot_between_line" />
                <View
                    android:layout_width="190dp"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:alpha=".2"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="158dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btFbLogin"
                    android:layout_width="192dp"
                    android:layout_height="55dp"
                    android:text="@string/facebook_login"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btGoogleLogin"
                    android:layout_width="192dp"
                    android:layout_height="55dp"
                    android:text="@string/google_login"
                    android:backgroundTint="#F43434"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
